# rise-thesis-wasm-tasks

./: .gitignore  build.sh
image_classification/: Cargo.toml  README.md
image_classification/src/: bindings.rs  lib.rs  main_old.rs  main_working.rs
image_classification/wit/: wasi-nn.wit
matrix-multiplication-component/: Cargo.toml
matrix-multiplication-component/src/: bindings.rs  lib.rs
matrix-multiplication-component/wit/: matrix.wit
